[package]
name = "serde-big-array-options"
version = "0.1.0"
edition = "2021"
description = "Allow to serialize/deserialize [Option<T>;N]"
authors = ["Nordine Bittich"]
license = "MIT"
repository = "https://github.com/nbittich/serde-big-array-options"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.189"
